{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 1370,
  "lineage": "6c954f1e-2e7b-ff07-79d8-91fd3fc68c52",
  "resources": [
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_security_group",
      "name": "LabVPCALBSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:security-group/sg-0e5fe3926c9f6cf2b",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "LabVPCALBSG"
                ]
              }
            ],
            "id": "sg-0e5fe3926c9f6cf2b",
            "name": "allow web access",
            "tags": {
              "Name": "LabVPCALBSG"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_security_group",
      "name": "LabVPCEC2SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:security-group/sg-0922da5004fb49b75",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "LabVPCEC2SG"
                ]
              }
            ],
            "id": "sg-0922da5004fb49b75",
            "name": "allow ALB to access EC2 instances",
            "tags": {
              "Name": "LabVPCEC2SG"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet_lab_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-0ceb08b9d1ef69ffe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "private-subnet-lab-ec2-1"
                ]
              }
            ],
            "id": "subnet-0ceb08b9d1ef69ffe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-lab-ec2-1"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-005997e57319d835d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "private-subnet-lab-ec2-2"
                ]
              }
            ],
            "id": "subnet-005997e57319d835d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-lab-ec2-2"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet_lab_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-0fd2645f2a9375082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.13.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "private-subnet-lab-rds-1"
                ]
              }
            ],
            "id": "subnet-0fd2645f2a9375082",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-lab-rds-1"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-0d84e5de28b8c98cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.14.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "private-subnet-lab-rds-2"
                ]
              }
            ],
            "id": "subnet-0d84e5de28b8c98cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-lab-rds-2"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-0116a48de881a3c6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "public-subnet-lab-1"
                ]
              }
            ],
            "id": "subnet-0116a48de881a3c6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-lab-1"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-03f818569f3edec45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "public-subnet-lab-2"
                ]
              }
            ],
            "id": "subnet-03f818569f3edec45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet-lab-2"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:vpc/vpc-0e7dff8ebac264ef7",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-020920b557b0137a5",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-04fe2e91c6f085fba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vpc_lab"
                ]
              }
            ],
            "id": "vpc-0e7dff8ebac264ef7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ea4b254ad5794284",
            "owner_id": "912611140120",
            "tags": {
              "Name": "vpc_lab"
            }
          }
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:912611140120:listener/app/lb-project-way/57a108e668ca2907/78e47f493c8c0f57",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:912611140120:targetgroup/tg-project/2d4d9992fe927626",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:912611140120:listener/app/lb-project-way/57a108e668ca2907/78e47f493c8c0f57",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:912611140120:loadbalancer/app/lb-project-way/57a108e668ca2907",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.lb_project",
            "module.compute.aws_lb_target_group.project",
            "module.compute.data.aws_security_group.LabVPCALBSG",
            "module.compute.data.aws_subnet.public_subnet_lab",
            "module.compute.data.aws_vpc.vpc_id",
            "module.database.aws_db_instance.LabVPCDBCluster",
            "module.database.aws_db_instance.rds_read",
            "module.database.aws_db_subnet_group.labvpcrsddb",
            "module.database.data.aws_security_group.LabVPCRDSSG",
            "module.database.data.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_eip.lab",
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_route_table.public_route_table_lab",
            "module.network.aws_route_table_association.private_route_table_lab_ec2",
            "module.network.aws_route_table_association.private_route_table_lab_rds",
            "module.network.aws_route_table_association.public_route_table_lab",
            "module.network.aws_security_group.LabVPCALBSG",
            "module.network.aws_security_group.LabVPCEC2SG",
            "module.network.aws_security_group.LabVPCRDSSG",
            "module.network.aws_subnet.private_subnet_lab_ec2",
            "module.network.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "att_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:912611140120:targetgroup/tg-project/2d4d9992fe927626-20220808155535512600000001",
            "port": 8443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:912611140120:targetgroup/tg-project/2d4d9992fe927626",
            "target_id": "i-0d2df593ee76b37f3"
          },
          "dependencies": [
            "module.compute.aws_instance.ec2-project",
            "module.compute.aws_lb_target_group.project",
            "module.compute.data.aws_db_instance.db-endpoint",
            "module.compute.data.aws_security_group.LabVPCEC2SG",
            "module.compute.data.aws_subnet.private_subnet_lab_ec2",
            "module.database.aws_db_instance.LabVPCDBCluster",
            "module.database.aws_db_instance.rds_read",
            "module.database.aws_db_subnet_group.labvpcrsddb",
            "module.database.data.aws_security_group.LabVPCRDSSG",
            "module.database.data.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_eip.lab",
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_route_table.public_route_table_lab",
            "module.network.aws_route_table_association.private_route_table_lab_ec2",
            "module.network.aws_route_table_association.private_route_table_lab_rds",
            "module.network.aws_route_table_association.public_route_table_lab",
            "module.network.aws_security_group.LabVPCALBSG",
            "module.network.aws_security_group.LabVPCEC2SG",
            "module.network.aws_security_group.LabVPCRDSSG",
            "module.network.aws_subnet.private_subnet_lab_ec2",
            "module.network.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:912611140120:targetgroup/tg-project/2d4d9992fe927626-20220808155535769100000002",
            "port": 8443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:912611140120:targetgroup/tg-project/2d4d9992fe927626",
            "target_id": "i-0e0cae68d77745608"
          },
          "dependencies": [
            "module.compute.aws_instance.ec2-project",
            "module.compute.aws_lb_target_group.project",
            "module.compute.data.aws_db_instance.db-endpoint",
            "module.compute.data.aws_security_group.LabVPCEC2SG",
            "module.compute.data.aws_subnet.private_subnet_lab_ec2",
            "module.database.aws_db_instance.LabVPCDBCluster",
            "module.database.aws_db_instance.rds_read",
            "module.database.aws_db_subnet_group.labvpcrsddb",
            "module.database.data.aws_security_group.LabVPCRDSSG",
            "module.database.data.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_eip.lab",
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_route_table.public_route_table_lab",
            "module.network.aws_route_table_association.private_route_table_lab_ec2",
            "module.network.aws_route_table_association.private_route_table_lab_rds",
            "module.network.aws_route_table_association.public_route_table_lab",
            "module.network.aws_security_group.LabVPCALBSG",
            "module.network.aws_security_group.LabVPCEC2SG",
            "module.network.aws_security_group.LabVPCRDSSG",
            "module.network.aws_subnet.private_subnet_lab_ec2",
            "module.network.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4d9ed95865f3b40",
            "arn": "arn:aws:ec2:us-west-1:912611140120:instance/i-0d2df593ee76b37f3",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2df593ee76b37f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0605724b501776048",
            "private_dns": "ip-10-0-11-122.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d829674dcfbadc02",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0922da5004fb49b75"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ceb08b9d1ef69ffe",
            "tags": {
              "Name": "ec2-project-1"
            },
            "tags_all": {
              "Name": "ec2-project-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0922da5004fb49b75"
            ]
          },
          "dependencies": [
            "module.compute.data.aws_db_instance.db-endpoint",
            "module.compute.data.aws_security_group.LabVPCEC2SG",
            "module.compute.data.aws_subnet.private_subnet_lab_ec2",
            "module.database.aws_db_instance.LabVPCDBCluster",
            "module.database.aws_db_instance.rds_read",
            "module.database.aws_db_subnet_group.labvpcrsddb",
            "module.database.data.aws_security_group.LabVPCRDSSG",
            "module.database.data.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_eip.lab",
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_route_table.public_route_table_lab",
            "module.network.aws_route_table_association.private_route_table_lab_ec2",
            "module.network.aws_route_table_association.private_route_table_lab_rds",
            "module.network.aws_route_table_association.public_route_table_lab",
            "module.network.aws_security_group.LabVPCALBSG",
            "module.network.aws_security_group.LabVPCEC2SG",
            "module.network.aws_security_group.LabVPCRDSSG",
            "module.network.aws_subnet.private_subnet_lab_ec2",
            "module.network.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4d9ed95865f3b40",
            "arn": "arn:aws:ec2:us-west-1:912611140120:instance/i-0e0cae68d77745608",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0cae68d77745608",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0956e34e6b5af3038",
            "private_dns": "ip-10-0-12-27.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.12.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08de88d6942cbbffa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0922da5004fb49b75"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005997e57319d835d",
            "tags": {
              "Name": "ec2-project-2"
            },
            "tags_all": {
              "Name": "ec2-project-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0922da5004fb49b75"
            ]
          },
          "dependencies": [
            "module.compute.data.aws_db_instance.db-endpoint",
            "module.compute.data.aws_security_group.LabVPCEC2SG",
            "module.compute.data.aws_subnet.private_subnet_lab_ec2",
            "module.database.aws_db_instance.LabVPCDBCluster",
            "module.database.aws_db_instance.rds_read",
            "module.database.aws_db_subnet_group.labvpcrsddb",
            "module.database.data.aws_security_group.LabVPCRDSSG",
            "module.database.data.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_eip.lab",
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_route_table.public_route_table_lab",
            "module.network.aws_route_table_association.private_route_table_lab_ec2",
            "module.network.aws_route_table_association.private_route_table_lab_rds",
            "module.network.aws_route_table_association.public_route_table_lab",
            "module.network.aws_security_group.LabVPCALBSG",
            "module.network.aws_security_group.LabVPCEC2SG",
            "module.network.aws_security_group.LabVPCRDSSG",
            "module.network.aws_subnet.private_subnet_lab_ec2",
            "module.network.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:912611140120:loadbalancer/app/lb-project-way/57a108e668ca2907",
            "arn_suffix": "app/lb-project-way/57a108e668ca2907",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-project-way-2023500805.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:912611140120:loadbalancer/app/lb-project-way/57a108e668ca2907",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-project-way",
            "security_groups": [
              "sg-0e5fe3926c9f6cf2b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0116a48de881a3c6b"
              },
              {
                "subnet_id": "subnet-03f818569f3edec45"
              }
            ],
            "subnets": [
              "subnet-0116a48de881a3c6b",
              "subnet-03f818569f3edec45"
            ],
            "vpc_id": "vpc-0e7dff8ebac264ef7",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.compute.data.aws_security_group.LabVPCALBSG",
            "module.compute.data.aws_subnet.public_subnet_lab",
            "module.database.aws_db_instance.LabVPCDBCluster",
            "module.database.aws_db_instance.rds_read",
            "module.database.aws_db_subnet_group.labvpcrsddb",
            "module.database.data.aws_security_group.LabVPCRDSSG",
            "module.database.data.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_eip.lab",
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_route_table.public_route_table_lab",
            "module.network.aws_route_table_association.private_route_table_lab_ec2",
            "module.network.aws_route_table_association.private_route_table_lab_rds",
            "module.network.aws_route_table_association.public_route_table_lab",
            "module.network.aws_security_group.LabVPCALBSG",
            "module.network.aws_security_group.LabVPCEC2SG",
            "module.network.aws_security_group.LabVPCRDSSG",
            "module.network.aws_subnet.private_subnet_lab_ec2",
            "module.network.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lsr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:912611140120:targetgroup/tg-project/2d4d9992fe927626",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:912611140120:listener-rule/app/lb-project-way/57a108e668ca2907/78e47f493c8c0f57/55b8d4d8d8cb2d56",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:912611140120:listener-rule/app/lb-project-way/57a108e668ca2907/78e47f493c8c0f57/55b8d4d8d8cb2d56",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:912611140120:listener/app/lb-project-way/57a108e668ca2907/78e47f493c8c0f57",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_alb_listener.project",
            "module.compute.aws_lb.lb_project",
            "module.compute.aws_lb_target_group.project",
            "module.compute.data.aws_security_group.LabVPCALBSG",
            "module.compute.data.aws_subnet.public_subnet_lab",
            "module.compute.data.aws_vpc.vpc_id",
            "module.database.aws_db_instance.LabVPCDBCluster",
            "module.database.aws_db_instance.rds_read",
            "module.database.aws_db_subnet_group.labvpcrsddb",
            "module.database.data.aws_security_group.LabVPCRDSSG",
            "module.database.data.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_eip.lab",
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_route_table.public_route_table_lab",
            "module.network.aws_route_table_association.private_route_table_lab_ec2",
            "module.network.aws_route_table_association.private_route_table_lab_rds",
            "module.network.aws_route_table_association.public_route_table_lab",
            "module.network.aws_security_group.LabVPCALBSG",
            "module.network.aws_security_group.LabVPCEC2SG",
            "module.network.aws_security_group.LabVPCRDSSG",
            "module.network.aws_subnet.private_subnet_lab_ec2",
            "module.network.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:912611140120:targetgroup/tg-project/2d4d9992fe927626",
            "arn_suffix": "targetgroup/tg-project/2d4d9992fe927626",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:912611140120:targetgroup/tg-project/2d4d9992fe927626",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-project",
            "port": 8443,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "dependencies": [
            "module.compute.data.aws_vpc.vpc_id",
            "module.database.aws_db_instance.LabVPCDBCluster",
            "module.database.aws_db_instance.rds_read",
            "module.database.aws_db_subnet_group.labvpcrsddb",
            "module.database.data.aws_security_group.LabVPCRDSSG",
            "module.database.data.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_eip.lab",
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_route_table.public_route_table_lab",
            "module.network.aws_route_table_association.private_route_table_lab_ec2",
            "module.network.aws_route_table_association.private_route_table_lab_rds",
            "module.network.aws_route_table_association.public_route_table_lab",
            "module.network.aws_security_group.LabVPCALBSG",
            "module.network.aws_security_group.LabVPCEC2SG",
            "module.network.aws_security_group.LabVPCRDSSG",
            "module.network.aws_subnet.private_subnet_lab_ec2",
            "module.network.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "data",
      "type": "aws_security_group",
      "name": "LabVPCRDSSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:security-group/sg-0996f07529b36d3a8",
            "description": "Managed by Terraform",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "LabVPCRDSSG"
                ]
              }
            ],
            "id": "sg-0996f07529b36d3a8",
            "name": "allow application to access the RDS instances",
            "tags": {
              "Name": "LabVPCRDSSG"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet_lab_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-0fd2645f2a9375082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.13.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "private-subnet-lab-rds-1"
                ]
              }
            ],
            "id": "subnet-0fd2645f2a9375082",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-lab-rds-1"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-0d84e5de28b8c98cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.14.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "private-subnet-lab-rds-2"
                ]
              }
            ],
            "id": "subnet-0d84e5de28b8c98cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-lab-rds-2"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074b48188ef5aa307",
            "association_id": "eipassoc-0dc5a3d95f26645cc",
            "domain": "vpc",
            "id": "eipalloc-074b48188ef5aa307",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0ec7313762ffd8b91",
            "private_dns": "ip-10-0-1-13.us-west-1.compute.internal",
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-3-101-11-240.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.11.240",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:internet-gateway/igw-022ee968db91e57d6",
            "id": "igw-022ee968db91e57d6",
            "owner_id": "912611140120",
            "tags": {
              "Name": "LabVPCInternetGateway"
            },
            "tags_all": {
              "Name": "LabVPCInternetGateway"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "dependencies": [
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "LabVPCNATGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074b48188ef5aa307",
            "connectivity_type": "public",
            "id": "nat-08b7505083028609d",
            "network_interface_id": "eni-0ec7313762ffd8b91",
            "private_ip": "10.0.1.13",
            "public_ip": "3.101.11.240",
            "subnet_id": "subnet-0116a48de881a3c6b",
            "tags": {
              "Name": "Nat-gateway"
            },
            "tags_all": {
              "Name": "Nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.lab",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:route-table/rtb-0f54e3783dec03699",
            "id": "rtb-0f54e3783dec03699",
            "owner_id": "912611140120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08b7505083028609d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-lab"
            },
            "tags_all": {
              "Name": "private-route-table-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:route-table/rtb-080371f8b4cb72047",
            "id": "rtb-080371f8b4cb72047",
            "owner_id": "912611140120",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022ee968db91e57d6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-lab"
            },
            "tags_all": {
              "Name": "public-route-table-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_lab_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e346ba6ac7e68350",
            "route_table_id": "rtb-0f54e3783dec03699",
            "subnet_id": "subnet-0ceb08b9d1ef69ffe"
          },
          "dependencies": [
            "module.network.aws_eip.lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_subnet.private_subnet_lab_ec2",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c85b35bef4e3fd28",
            "route_table_id": "rtb-0f54e3783dec03699",
            "subnet_id": "subnet-005997e57319d835d"
          },
          "dependencies": [
            "module.network.aws_eip.lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_subnet.private_subnet_lab_ec2",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_lab_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecee539f8ada8ad7",
            "route_table_id": "rtb-0f54e3783dec03699",
            "subnet_id": "subnet-0fd2645f2a9375082"
          },
          "dependencies": [
            "module.network.aws_eip.lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e0069e7c11880b3",
            "route_table_id": "rtb-0f54e3783dec03699",
            "subnet_id": "subnet-0d84e5de28b8c98cf"
          },
          "dependencies": [
            "module.network.aws_eip.lab",
            "module.network.aws_nat_gateway.LabVPCNATGateway",
            "module.network.aws_route_table.private_route_table_lab",
            "module.network.aws_subnet.private_subnet_lab_rds",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7b1f18e094f42c2",
            "route_table_id": "rtb-080371f8b4cb72047",
            "subnet_id": "subnet-0116a48de881a3c6b"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_route_table.public_route_table_lab",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9ebc5354672e749",
            "route_table_id": "rtb-080371f8b4cb72047",
            "subnet_id": "subnet-03f818569f3edec45"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.IG_lab",
            "module.network.aws_route_table.public_route_table_lab",
            "module.network.aws_subnet.public_subnet_lab",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LabVPCALBSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:security-group/sg-0e5fe3926c9f6cf2b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5fe3926c9f6cf2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "allow web access",
            "name_prefix": "",
            "owner_id": "912611140120",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LabVPCALBSG"
            },
            "tags_all": {
              "Name": "LabVPCALBSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LabVPCEC2SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:security-group/sg-0922da5004fb49b75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0922da5004fb49b75",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e5fe3926c9f6cf2b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e5fe3926c9f6cf2b"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e5fe3926c9f6cf2b"
                ],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "allow ALB to access EC2 instances",
            "name_prefix": "",
            "owner_id": "912611140120",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LabVPCEC2SG"
            },
            "tags_all": {
              "Name": "LabVPCEC2SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.LabVPCALBSG",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LabVPCRDSSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:security-group/sg-0996f07529b36d3a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0996f07529b36d3a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0922da5004fb49b75"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow application to access the RDS instances",
            "name_prefix": "",
            "owner_id": "912611140120",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LabVPCRDSSG"
            },
            "tags_all": {
              "Name": "LabVPCRDSSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.LabVPCALBSG",
            "module.network.aws_security_group.LabVPCEC2SG",
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_lab_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-0ceb08b9d1ef69ffe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceb08b9d1ef69ffe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-lab-ec2-1"
            },
            "tags_all": {
              "Name": "private-subnet-lab-ec2-1"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "dependencies": [
            "module.network.aws_vpc.LabVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-005997e57319d835d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005997e57319d835d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-lab-ec2-2"
            },
            "tags_all": {
              "Name": "private-subnet-lab-ec2-2"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "dependencies": [
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_lab_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-0fd2645f2a9375082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd2645f2a9375082",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-lab-rds-1"
            },
            "tags_all": {
              "Name": "private-subnet-lab-rds-1"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "dependencies": [
            "module.network.aws_vpc.LabVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-0d84e5de28b8c98cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d84e5de28b8c98cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-lab-rds-2"
            },
            "tags_all": {
              "Name": "private-subnet-lab-rds-2"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "dependencies": [
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-0116a48de881a3c6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0116a48de881a3c6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-lab-1"
            },
            "tags_all": {
              "Name": "public-subnet-lab-1"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "dependencies": [
            "module.network.aws_vpc.LabVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:subnet/subnet-03f818569f3edec45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f818569f3edec45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "912611140120",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-lab-2"
            },
            "tags_all": {
              "Name": "public-subnet-lab-2"
            },
            "vpc_id": "vpc-0e7dff8ebac264ef7"
          },
          "dependencies": [
            "module.network.aws_vpc.LabVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "LabVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:912611140120:vpc/vpc-0e7dff8ebac264ef7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047d7198d3cbd8308",
            "default_route_table_id": "rtb-0ea4b254ad5794284",
            "default_security_group_id": "sg-0165b9a834e7684f2",
            "dhcp_options_id": "dopt-04fe2e91c6f085fba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e7dff8ebac264ef7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea4b254ad5794284",
            "owner_id": "912611140120",
            "tags": {
              "Name": "vpc_lab"
            },
            "tags_all": {
              "Name": "vpc_lab"
            }
          }
        }
      ]
    }
  ]
}